# CodeRAG

./: README.md  pyproject.toml  requirements.txt
code_rag/: chunking.py  cli.py  embedding.py  ingestion.py  llm_response.py  pipeline.py
scripts/: build_treesitter.py
