[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderag"
version = "0.1.0"
description = "CodeRAG: Retrieval-Augmented Generation for Codebases"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Rimshid Ali" }
]

dependencies = [
    "tree_sitter==0.21.3",
    "sentence_transformers>=5.1.0",
    "chromadb",
]

[project.scripts]
coderag = "code_rag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_rag*"]
